Fonts for i3status-rust
https://docs.gtk.org/Pango/type_func.FontDescription.from_string.html#description
https://github.com/greshake/i3status-rust/tree/v0.21.10

--- a/X1Nano1340/dotfiles/i3status-rust/config.toml
+++ b/X1Nano1340/dotfiles/i3status-rust/config.toml
@@ -1,5 +1,7 @@
 [theme]
 name = "solarized-dark"
+# separator = "."
+# https://github.com/greshake/i3status-rust/issues/466
 [theme.overrides]
 idle_bg = "#123456"
 idle_fg = "#abcdef"
