--- a/X1Nano1340/dotfiles/i3status-rust/config.toml
+++ b/X1Nano1340/dotfiles/i3status-rust/config.toml
@@ -1,49 +1,39 @@
-[theme]
-name = "solarized-dark"
-# separator = "."
-# https://github.com/greshake/i3status-rust/issues/466
-[theme.overrides]
-idle_bg = "#123456"
-idle_fg = "#abcdef"
-
-[icons]
-name = "awesome"
-[icons.overrides]
-bat = " | | "
-bat_full = " |X| "
-bat_charging = " |^| "
-bat_discharging = " |v| "
-
-[[block]]
-block = "cpu"
+theme = "solarized-dark"
+icons = "awesome"
 
 [[block]]
 block = "disk_space"
 path = "/"
+alias = "/"
 info_type = "available"
 unit = "GB"
 interval = 20
 warning = 20.0
 alert = 10.0
-format = "root: $available.eng(2)"
 
 [[block]]
 block = "memory"
 display_type = "memory"
-format_mem = "$mem_total_used_percents.eng(2)"
-format_swap = "$swap_used_percents.eng(2)"
+format_mem = "{mem_used_percents}"
+format_swap = "{swap_used_percents}"
+
+[[block]]
+block = "cpu"
+interval = 1
+
+[[block]]
+block = "load"
+interval = 1
+format = "{1m}"
 
 [[block]]
 block = "sound"
-# Failed to deserialize block config.. Cause: unknown field `click`, expected one of `driver`, `name`, `device`, `device_kind`, `natural_mapping`, `step width`, `format`, `headphones_indicator`, `show_volume_when_muted`, `mappings`, `max_vol`
-#[[block.click]]
-#button = "left"
-#cmd = "pavucontrol"
 
 [[block]]
 block = "time"
 interval = 5
 format = "%a %d/%m %R"
-[block.icons_overrides]
-time = ""
 
+[[block]]
+block = "battery"
+if_command = "test -e /sys/class/power_supply/BAT0"
