--- a/X1Nano1340/dotfiles/i3status-rust/config.toml
+++ b/X1Nano1340/dotfiles/i3status-rust/config.toml
@@ -3,8 +3,7 @@ icons = "awesome"
 
 [[block]]
 block = "disk_space"
-path = "/"
-alias = "/"
+path = "/nix"
 info_type = "available"
 unit = "GB"
 interval = 20
@@ -21,19 +20,54 @@ format_swap = "{swap_used_percents}"
 block = "cpu"
 interval = 1
 
+#[[block]]
+#block = "load"
+#interval = 1
+#format = "{1m}"
+
 [[block]]
-block = "load"
-interval = 1
-format = "{1m}"
+block = "battery"
+if_command = "test -e /sys/class/power_supply/BAT0"
+
+# === DESIGN CHOICE: Put all "read-only" blocks before this line ===
+# === DESIGN CHOICE: Put all "interactive" blocks after this line ===
+# only exception: date/time goes last
+
+# https://github.com/greshake/i3status-rust/blob/v0.21.10/doc/blocks.md#backlight
+[[block]]
+block = "backlight"
+minimum = 0
+maximum = 100
+step_width = 1
+cycle = [100, 0]
+invert_icons = true
+
+# TODO(from joseph): https://github.com/greshake/i3status-rust/blob/v0.21.10/doc/blocks.md#hueshift
+# https://gitlab.com/chinstrap/gammastep
+# https://github.com/MaxVerevkin/wl-gammarelay-rs
+# https://sr.ht/~kennylevinsen/wlsunset/
+# Choose whichever has the fewest dependencies I suppose
 
 [[block]]
 block = "sound"
+
+# https://github.com/greshake/i3status-rust/blob/v0.21.10/doc/blocks.md#net
+[[block]]
+block = "net"
+device = "wlp0s20f3"
+# format = "{speed_down;K*b} {speed_up;K*b}"
+format = "{frequency;G*Hz}"
+
+# https://github.com/greshake/i3status-rust/blob/v0.21.10/doc/blocks.md#networkmanager
+[[block]]
+block = "networkmanager"
+on_click = "swaynag -m 'Edit Wi-Fi Connections' -z 'click to open nmtui' 'urxvt -e nmtui' -s 'run nmcli yourself'"
+interface_name_include = ["wlp0s20f3"]
+#ap_format = "{strength} {freq*Hz}"
+ap_format = "{strength}"
+device_format = "{ap}"
 
 [[block]]
 block = "time"
 interval = 5
 format = "%a %d/%m %R"
-
-[[block]]
-block = "battery"
-if_command = "test -e /sys/class/power_supply/BAT0"
