--- a/X1Nano1340/dotfiles/sway/config
+++ b/X1Nano1340/dotfiles/sway/config
@@ -123,10 +123,15 @@ bindsym XF86AudioMute exec 'pactl set-sink-mute @DEFAULT_SINK@ toggle'
     bindsym $mod+$up focus up
     bindsym $mod+$right focus right
     # Or use $mod+[up|down|left|right]
-    bindsym $mod+Left focus left
-    bindsym $mod+Down focus down
-    bindsym $mod+Up focus up
-    bindsym $mod+Right focus right
+    #bindsym $mod+Left focus left
+    #bindsym $mod+Down focus down
+    #bindsym $mod+Up focus up
+    #bindsym $mod+Right focus right
+
+    bindsym $mod+Left workspace prev
+    bindsym $mod+Right workspace next
+    #bindsym $mod+Left workspace prev_on_output
+    #bindsym $mod+Right workspace next_on_output
 
     # Move the focused window with the same, but add Shift
     bindsym $mod+Shift+$left move left
@@ -134,10 +139,16 @@ bindsym XF86AudioMute exec 'pactl set-sink-mute @DEFAULT_SINK@ toggle'
     bindsym $mod+Shift+$up move up
     bindsym $mod+Shift+$right move right
     # Ditto, with arrow keys
-    bindsym $mod+Shift+Left move left
-    bindsym $mod+Shift+Down move down
-    bindsym $mod+Shift+Up move up
-    bindsym $mod+Shift+Right move right
+    #bindsym $mod+Shift+Left move left
+    #bindsym $mod+Shift+Down move down
+    #bindsym $mod+Shift+Up move up
+    #bindsym $mod+Shift+Right move right
+
+    bindsym $mod+Shift+Left move container to workspace prev
+    bindsym $mod+Shift+Right move container to workspace next
+    #bindsym $mod+Shift+Left move container to workspace prev_on_output
+    #bindsym $mod+Shift+Right move container to workspace next_on_output
+
 #
 # Workspaces:
 #
@@ -166,9 +177,15 @@ bindsym XF86AudioMute exec 'pactl set-sink-mute @DEFAULT_SINK@ toggle'
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
 
-    assign [app_id="firefox"] workspace number 2
+    assign [app_id="^URxvt$"] workspace number 1
+    assign [app_id="^foot$"] workspace number 1
+    assign [app_id="^firefox$"] workspace number 2
     # https://ld.reddit.com/r/swaywm/comments/czyiu9/automatically_launch_applications_on_specific/
     # swaymsg -t get_tree | grep -e '"app_id"' -e '"class"'
+    exec firefox
+    exec urxvt
+    exec foot
+    exec meastral start
 
 #
 # Layout stuff:
