--- a/X1Nano1340/dotfiles/i3status-rust/config.toml
+++ b/X1Nano1340/dotfiles/i3status-rust/config.toml
@@ -55,6 +55,9 @@ block = "sound"
 #[[block]]
 #block = "hueshift"
 #hue_shifter = "wlsunset"
+# Manual run for now:
+# >>> wlsunset -l 37.40289347787221 -L -122.0818236182056
+# https://git.sr.ht/~kennylevinsen/wlsunset/tree/master/item/main.c
 
 # https://github.com/greshake/i3status-rust/blob/v0.21.10/doc/blocks.md#net
 [[block]]
