--- a/X1Nano1340/dotfiles/sway/config
+++ b/X1Nano1340/dotfiles/sway/config
@@ -216,6 +216,7 @@ workspace_auto_back_and_forth yes
     exec urxvt
     exec foot
     exec meastral start
+    exec libinput-gestures -c /etc/libinput-gestures.conf
 
 #
 # Layout stuff:
