--- a/X1Nano1340/dotfiles/sway/config
+++ b/X1Nano1340/dotfiles/sway/config
@@ -221,8 +221,9 @@ workspace_auto_back_and_forth yes
     assign [class="^URxvt$"] workspace number 1
     assign [app_id="^foot$"] workspace number 1
     assign [app_id="^firefox$"] workspace number 2
-    #assign [class="(?i)^Chromium-browser$"] workspace number 3
     assign [app_id="^librewolf$"] workspace number 3
+    assign [class="(?i)^Chromium-browser$"] workspace number 5
+    assign [app_id="^epiphany$"] workspace number 6
     # swaymsg -t get_tree | grep -e '"app_id"' -e '"class"' -e window_role
     # https://ld.reddit.com/r/swaywm/comments/czyiu9/automatically_launch_applications_on_specific/
     exec mako
