--- a/X1Nano1340/dotfiles/i3status-rust/config.toml
+++ b/X1Nano1340/dotfiles/i3status-rust/config.toml
@@ -42,6 +42,23 @@ step_width = 1
 cycle = [100, 0]
 invert_icons = true
 
+# https://github.com/greshake/i3status-rust/blob/v0.21.10/doc/blocks.md#net
+[[block]]
+block = "net"
+on_click = "swaynag -m 'Edit Wi-Fi Connections' -z 'click to open nmtui' 'urxvt -e nmtui' -s 'run nmcli yourself'"
+device = "wlp0s20f3"
+# format = "{speed_down;K*b} {speed_up;K*b}"
+format = "{frequency;G*Hz} {signal_strength}"
+
+# https://github.com/greshake/i3status-rust/blob/v0.21.10/doc/blocks.md#networkmanager
+# https://github.com/greshake/i3status-rust/blob/26763bc0e023808fb756601fd38a735dc391b825/NEWS.md?plain=1#L18
+#[[block]]
+#block = "networkmanager"
+#interface_name_include = ["wlp0s20f3"]
+##ap_format = "{strength} {freq*Hz}"
+#ap_format = "{strength}"
+#device_format = "{ap}"
+
 # TODO(from joseph): https://github.com/greshake/i3status-rust/blob/v0.21.10/doc/blocks.md#hueshift
 # https://gitlab.com/chinstrap/gammastep
 # https://github.com/MaxVerevkin/wl-gammarelay-rs
@@ -56,21 +73,6 @@ invert_icons = true
 # >>> wlsunset -l 37.40289347787221 -L -122.0818236182056
 # https://git.sr.ht/~kennylevinsen/wlsunset/tree/master/item/main.c
 
-# https://github.com/greshake/i3status-rust/blob/v0.21.10/doc/blocks.md#net
-[[block]]
-block = "net"
-device = "wlp0s20f3"
-# format = "{speed_down;K*b} {speed_up;K*b}"
-format = "{frequency;G*Hz}"
-
-# https://github.com/greshake/i3status-rust/blob/v0.21.10/doc/blocks.md#networkmanager
-[[block]]
-block = "networkmanager"
-on_click = "swaynag -m 'Edit Wi-Fi Connections' -z 'click to open nmtui' 'urxvt -e nmtui' -s 'run nmcli yourself'"
-interface_name_include = ["wlp0s20f3"]
-#ap_format = "{strength} {freq*Hz}"
-ap_format = "{strength}"
-device_format = "{ap}"
 
 [[block]]
 block = "time"
