Add data space remaining w/ icon to delineate

--- a/X1Nano1340/dotfiles/i3status-rust/config.toml
+++ b/X1Nano1340/dotfiles/i3status-rust/config.toml
@@ -3,6 +3,12 @@ icons = "awesome"
 
 [[block]]
 block = "disk_space"
+path = "/"
+unit = "B"
+format = "{icon} {available}"
+
+[[block]]
+block = "disk_space"
 path = "/nix"
 info_type = "available"
 unit = "GB"
