--- a/X1Nano1340/dotfiles/mpv/mpv.conf
+++ b/X1Nano1340/dotfiles/mpv/mpv.conf
@@ -5,3 +5,11 @@ alang=eng
 
 # https://www.reddit.com/r/mpv/comments/gygamu/how_to_fit_video_above_with_always_visible_osc/
 video-align-y=-0.2
+
+# https://mpv.io/manual/stable/#keyboard-control
+# https://www.reddit.com/r/mpv/comments/pwf6db/how_do_i_put_subtitles_under_the_video/
+# https://github.com/mpv-player/mpv/issues/346
+# https://www.reddit.com/r/mpv/comments/gx1k9c/subtitle_postion_under_the_movie_change_subtitle/
+# JH note: didn't do anything
+# sub-use-margins
+# sub-ass-force-margins
