--- a/X1Nano1340/dotfiles/i3status-rust/config.toml
+++ b/X1Nano1340/dotfiles/i3status-rust/config.toml
@@ -52,7 +52,7 @@ invert_icons = true
 [[block]]
 block = "net"
 #on_click = "swaynag -m 'Edit Wi-Fi Connections' -z 'click to open nmtui' 'urxvt -e nmtui' -s 'run nmcli yourself'"
-on_click = "waynag -m 'Edit Wi-Fi Connections' -z 'click to open nmtui' 'urxvt -e nmtui' -z 'turn on wifi' 'nmcli radio wifi on' -s 'run nmcli yourself'"
+on_click = "swaynag -m 'Edit Wi-Fi Connections' -z 'click to open nmtui' 'urxvt -e nmtui' -z 'turn on wifi' 'nmcli radio wifi on' -s 'run nmcli yourself'"
 device = "wlp0s20f3"
 # format = "{speed_down;K*b} {speed_up;K*b}"
 format = "{frequency;G*Hz} {signal_strength}"
