--- a/X1Nano1340/dotfiles/i3status-rust/config.toml
+++ b/X1Nano1340/dotfiles/i3status-rust/config.toml
@@ -1,23 +1,25 @@
+[theme]
 theme = "solarized-dark"
-icons = "awesome"
+[icons]
+icons = "awesome4"
+
+# https://github.com/greshake/i3status-rust/blob/a5d58997a7f40d92fffe032ea4ef697f8f1c8380/NEWS.md#i3status-rust-0300
 
 [[block]]
 block = "disk_space"
 path = "/"
-unit = "B"
-format = "{icon} {available}"
+format = "$icon$available.eng(prefix:G)"
 
 [[block]]
 block = "disk_space"
 path = "/nix"
 info_type = "available"
-unit = "GB"
 interval = 20
 warning = 20.0
 alert = 10.0
 # format = "✇ {available}"
 # format = "⚝ {available}"
-format = "❃ {available}"
+format = "❃$available.eng(prefix:G)"
 # ✡
 # ✱✲✶✽
 # ❄❅❆❃
@@ -27,9 +29,8 @@ format = "❃ {available}"
 
 [[block]]
 block = "memory"
-display_type = "memory"
-format_mem = "{mem_used_percents}"
-format_swap = "{swap_used_percents}"
+format = "$icon$mem_total_used_percents.eng(w:2) "
+format_alt = "$icon_swap$swap_used_percents.eng(w:2) "
 
 [[block]]
 block = "cpu"
@@ -45,7 +46,7 @@ block = "battery"
 # if_command = "test -e /sys/class/power_supply/BAT0"
 driver = "upower"
 # https://github.com/greshake/i3status-rust/issues/305
-format = "{percentage} ({time})"
+format = "$icon$percentage ($time)"
 # https://github.com/greshake/i3status-rust/blob/v0.22.0/doc/blocks.md#battery
 
 
@@ -65,11 +66,14 @@ invert_icons = true
 # https://github.com/greshake/i3status-rust/blob/v0.21.10/doc/blocks.md#net
 [[block]]
 block = "net"
-#on_click = "swaynag -m 'Edit Wi-Fi Connections' -z 'click to open nmtui' 'urxvt -e nmtui' -s 'run nmcli yourself'"
-on_click = "swaynag -m 'Edit Wi-Fi Connections' -z 'click to open nmtui' 'urxvt -e nmtui' -z 'turn on wifi' 'nmcli radio wifi on' -s 'run nmcli yourself'"
 device = "wlp0s20f3"
 # format = "{speed_down;K*b} {speed_up;K*b}"
-format = "{frequency;G*Hz} {signal_strength}"
+# format = "{frequency;G*Hz} {signal_strength}"
+format = "$icon$frequency.eng(prefix:G,w:5) $signal_strength"
+[[block.click]]
+button = "left"
+#on_click = "swaynag -m 'Edit Wi-Fi Connections' -z 'click to open nmtui' 'urxvt -e nmtui' -s 'run nmcli yourself'"
+cmd = "swaynag -m 'Edit Wi-Fi Connections' -z 'click to open nmtui' 'urxvt -e nmtui' -z 'turn on wifi' 'nmcli radio wifi on' -s 'run nmcli yourself'"
 
 # https://github.com/greshake/i3status-rust/blob/v0.21.10/doc/blocks.md#networkmanager
 # https://github.com/greshake/i3status-rust/blob/26763bc0e023808fb756601fd38a735dc391b825/NEWS.md?plain=1#L18
@@ -96,7 +100,8 @@ format = "{frequency;G*Hz} {signal_strength}"
 
 [[block]]
 block = "time"
-format = "%a %b %d, %R"
+# format = "%a %b %d, %R"
+format = "$icon $timestamp.datetime(f:'%a %b %d, %R')"
 
 [[block]]
 block = "sound"
