--- a/X1Nano1340/dotfiles/sway/config
+++ b/X1Nano1340/dotfiles/sway/config
@@ -233,6 +233,7 @@ workspace_auto_back_and_forth yes
     assign [app_id="^librewolf$"] workspace number 3
     assign [app_id="^doublecmd$"] workspace number 5
     assign [class="(?i)^Chromium-browser$"] workspace number 5
+    assign [class="(?i)^Microsoft-edge$"] workspace number 5
     assign [class="Nxplayer.bin"] workspace number 5
     assign [app_id="org.remmina.Remmina"] workspace number 5
     assign [app_id="^epiphany$"] workspace number 6
