--- a/X1Nano1340/dotfiles/sway/config
+++ b/X1Nano1340/dotfiles/sway/config
@@ -238,6 +238,7 @@ workspace_auto_back_and_forth yes
     assign [app_id="org.remmina.Remmina"] workspace number 5
     assign [app_id="^epiphany$"] workspace number 6
     assign [app_id="^org.qutebrowser.qutebrowser$"] workspace number 6
+    assign [app_id="^midori$"] workspace number 6
     # swaymsg -t get_tree | grep -e '"app_id"' -e '"class"' -e window_role
     # https://ld.reddit.com/r/swaywm/comments/czyiu9/automatically_launch_applications_on_specific/
     exec mako
