--- a/X1Nano1340/dotfiles/i3status-rust/config.toml
+++ b/X1Nano1340/dotfiles/i3status-rust/config.toml
@@ -122,3 +122,7 @@ format = " $icon $timestamp.datetime(f:'%a %b %d, %R')"
 
 [[block]]
 block = "sound"
+
+# [[block]]
+# block = "bluetooth"
+# mac = "40:1C:83:77:66:8A"
