Minor cleanups after the latest updates

--- a/X1Nano1340/dotfiles/i3status-rust/config.toml
+++ b/X1Nano1340/dotfiles/i3status-rust/config.toml
@@ -122,6 +122,7 @@ format = " $icon $timestamp.datetime(f:'%a %b %d, %R')"
 
 [[block]]
 block = "sound"
+max_vol = 123
 
 # [[block]]
 # block = "bluetooth"
