--- a/X1Nano1340/dotfiles/sway/config
+++ b/X1Nano1340/dotfiles/sway/config
@@ -249,6 +249,8 @@ workspace_auto_back_and_forth yes
     # Wayland-native Firefox uses javscript to dynamically set its title. All windows start with "Mozilla Firefox" as the title when first spawned.
     for_window [app_id="^firefox$" title="^Mozilla Firefox$"] move to workspace number 2
     for_window [app_id="^firefox$" title="Mozilla Firefox Private Browsing$"] move to workspace number 4
+    assign [class="^FreeTube$"] workspace number 4
+    for_window [app_id="^floorp$"] move to workspace number 5
     assign [app_id="^librewolf$"] workspace number 3
     assign [app_id="^doublecmd$"] workspace number 5
     assign [class="(?i)^Chromium-browser$"] workspace number 5
