--- a/X1Nano1340_gen13.home/dotconfig/sway/config
+++ b/X1Nano1340_gen13.home/dotconfig/sway/config
@@ -277,6 +277,8 @@ workspace_auto_back_and_forth yes
     assign [class="^URxvt$"] workspace number 1
     assign [app_id="^foot$"] workspace number 1
     assign [app_id="^.blueman-manager-wrapped"] workspace number 1
+    assign [app_id="^librewolf$"] workspace number 3
+    assign [app_id="^app.zen_browser.zen$"] workspace number 3
     # assign [app_id="^firefox$"] workspace number 2
     # Wayland-native Firefox uses javscript to dynamically set its title. All windows start with "Mozilla Firefox" as the title when first spawned.
     for_window [app_id="^firefox$" title="^Mozilla Firefox$"] move to workspace number 2
@@ -286,7 +288,6 @@ workspace_auto_back_and_forth yes
     assign [class="^FreeTube$"] workspace number 4
     # for_window [app_id="^floorp$"] move to workspace number 5
     assign [app_id="^floorp$"] workspace number 5
-    assign [app_id="^librewolf$"] workspace number 3
     assign [app_id="^doublecmd$"] workspace number 5
     assign [class="(?i)^Chromium-browser$"] workspace number 5
     assign [class="(?i)^Microsoft-edge$"] workspace number 5
